<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey"
        android:textSize="20dp"
        android:textColorHint="@color/grey"
        android:text="@string/editProfile"/>

    <Button
        android:id="@+id/buttonImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scatta_foto"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:text="@string/photo"/>

    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome" />
    <EditText
        android:id="@+id/editName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bio"/>
    <EditText
        android:id="@+id/editBio"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tel"/>
    <EditText
        android:id="@+id/editTel"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"/>
    <EditText
        android:id="@+id/editEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditData"
        android:background="@color/grey"
        android:textColor="@color/white"
        android:text="@string/save"/>
</LinearLayout>